@@ -23,39 +23,49 @@ import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.order.server.entity.OrderType;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.model.data.order.server.factory.OrderTypeFactory;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.validation.FieldDefinition;
-import com.echothree.util.server.control.BaseMultipleEntitiesCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 
 public class GetOrderTypesCommand
-        extends BaseMultipleEntitiesCommand<OrderType, GetOrderTypesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<OrderType, GetOrderTypesForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.OrderType.name(), SecurityRoles.List.name())
-                        )))
-                )));
-        
+                ))
+        ));
+
         FORM_FIELD_DEFINITIONS = List.of();
     }
     
     /** Creates a new instance of GetOrderTypesCommand */
     public GetOrderTypesCommand() {
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
+    }
+
+    @Override
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
+        var orderTypeControl = Session.getModelController(OrderTypeControl.class);
+
+        return orderTypeControl.countOrderTypes();
     }
 
     @Override
@@ -71,6 +81,10 @@ public class GetOrderTypesCommand
 
         if(entities != null) {
             var orderTypeControl = Session.getModelController(OrderTypeControl.class);
+
+            if(session.hasLimit(OrderTypeFactory.class)) {
+                result.setOrderTypeCount(getTotalEntities());
+            }
 
             result.setOrderTypes(orderTypeControl.getOrderTypeTransfers(getUserVisit(), entities));
         }
